--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-main></app-main>
+  <app></app>
 </body>
 </html>
