--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCILO4xoPNpMG4_cD50p0JNjh0eMUjaXGo" async defer></script>
 </body>
 </html>
